--- a/algorism/dfs/12100번.md
+++ b/algorism/dfs/12100번.md
@@ -1,162 +1,208 @@
-## 12100번 2480(Easy)
+# 12100번 2480(Easy)
 
-특정 테스트 케이스 통과 못함
 
-리스트 저장관련 문제 있는 듯 
+
+### 문제
+
+
+
+2048 게임은 4×4 크기의 보드에서 혼자 즐기는 재미있는 게임이다. 이 [링크](https://gabrielecirulli.github.io/2048/)를 누르면 게임을 해볼 수 있다.
+
+이 게임에서 한 번의 이동은 보드 위에 있는 전체 블록을 상하좌우 네 방향 중 하나로 이동시키는 것이다. 이때, 같은 값을 갖는 두 블록이 충돌하면 두 블록은 하나로 합쳐지게 된다. 한 번의 이동에서 이미 합쳐진 블록은 또 다른 블록과 다시 합쳐질 수 없다. (실제 게임에서는 이동을 한 번 할 때마다 블록이 추가되지만, 이 문제에서 블록이 추가되는 경우는 없다)
+
+| ![img](12100번.assets/1-164320072894716.png) | ![img](12100번.assets/2-164320072894718.png) | ![img](12100번.assets/3-164320072894720.png) |
+| -------------------------------------------- | -------------------------------------------- | -------------------------------------------- |
+| <그림 1>                                     | <그림 2>                                     | <그림 3>                                     |
+
+<그림 1>의 경우에서 위로 블록을 이동시키면 <그림 2>의 상태가 된다. 여기서, 왼쪽으로 블록을 이동시키면 <그림 3>의 상태가 된다.
+
+| ![img](12100번.assets/4-164320072894722.png) | ![img](12100번.assets/5-164320072894724.png) | ![img](12100번.assets/6-164320072894726.png) | ![img](12100번.assets/7-164320072894728.png) |
+| -------------------------------------------- | -------------------------------------------- | -------------------------------------------- | -------------------------------------------- |
+| <그림 4>                                     | <그림 5>                                     | <그림 6>                                     | <그림 7>                                     |
+
+<그림 4>의 상태에서 블록을 오른쪽으로 이동시키면 <그림 5>가 되고, 여기서 다시 위로 블록을 이동시키면 <그림 6>이 된다. 여기서 오른쪽으로 블록을 이동시켜 <그림 7>을 만들 수 있다.
+
+| ![img](12100번.assets/8-164320072894830.png) | ![img](12100번.assets/10-164320072894832.png) |
+| -------------------------------------------- | --------------------------------------------- |
+| <그림 8>                                     | <그림 9>                                      |
+
+<그림 8>의 상태에서 왼쪽으로 블록을 옮기면 어떻게 될까? 2가 충돌하기 때문에, 4로 합쳐지게 되고 <그림 9>의 상태가 된다.
+
+| ![img](12100번.assets/17-164320072894834.png) | ![img](12100번.assets/18-164320072894836.png) | ![img](12100번.assets/19-164320072894838.png) | ![img](12100번.assets/20-164320072894840.png) |
+| --------------------------------------------- | --------------------------------------------- | --------------------------------------------- | --------------------------------------------- |
+| <그림 10>                                     | <그림 11>                                     | <그림 12>                                     | <그림 13>                                     |
+
+<그림 10>에서 위로 블록을 이동시키면 <그림 11>의 상태가 된다. 
+
+<그림 12>의 경우에 위로 블록을 이동시키면 <그림 13>의 상태가 되는데, 그 이유는 한 번의 이동에서 이미 합쳐진 블록은 또 합쳐질 수 없기 때문이다.
+
+| ![img](12100번.assets/21-164320072894842.png) | ![img](12100번.assets/22-164320072894844.png) |
+| --------------------------------------------- | --------------------------------------------- |
+| <그림 14>                                     | <그림 15>                                     |
+
+마지막으로, 똑같은 수가 세 개가 있는 경우에는 이동하려고 하는 쪽의 칸이 먼저 합쳐진다. 예를 들어, 위로 이동시키는 경우에는 위쪽에 있는 블록이 먼저 합쳐지게 된다. <그림 14>의 경우에 위로 이동하면 <그림 15>를 만든다.
+
+이 문제에서 다루는 2048 게임은 보드의 크기가 N×N 이다. 보드의 크기와 보드판의 블록 상태가 주어졌을 때, 최대 5번 이동해서 만들 수 있는 가장 큰 블록의 값을 구하는 프로그램을 작성하시오.
+
+---
+
+### 입력
+
+
+
+첫째 줄에 보드의 크기 N (1 ≤ N ≤ 20)이 주어진다. 둘째 줄부터 N개의 줄에는 게임판의 초기 상태가 주어진다. 0은 빈 칸을 나타내며, 이외의 값은 모두 블록을 나타낸다. 블록에 쓰여 있는 수는 2보다 크거나 같고, 1024보다 작거나 같은 2의 제곱꼴이다. 블록은 적어도 하나 주어진다.
+
+---
+
+### 출력
+
+
+
+최대 5번 이동시켜서 얻을 수 있는 가장 큰 블록을 출력한다.
+
+---
+
+## Point
+
+
+
+1. 결국 품.... 깊이 5짜리 dfs 문제로 간단할 거 같았지만 리스트를 인자로 받아야 했는데 이게 리스트 복사가 잘 안 이루어졌다. 참조 문제 때문인가 
+
+   arr_ = arr[:] 얘도 안되고
+
+   arr_ = [t for t in arr] 얘도 안되고 arr_ = [arr[t] for t in range(n)] 얘도 안돼서 결국 deepcopy를 쓴 끝에 성공했다.
+
+2. 테스트케이스는 또 어느정도는 성공해서 내가 어딜 틀렸는 지 찾는 데만 한 세월이 걸렸다. 세상에...
+
+   
 
 ```python
 import sys
-import pprint
+import copy
 
 n = int(sys.stdin.readline())
 
-def up():
+def up(m):
     for i in range(n):
         res = []
         tmp = 0
         for j in range(n):
             if tmp == 0:
-                tmp = arr[j][i]
+                tmp = m[j][i]
             else:
-                if arr[j][i] == 0:
+                if m[j][i] == 0:
                     continue
-                if tmp == arr[j][i]:
-                    tmp += arr[j][i]
+                if tmp == m[j][i]:
+                    tmp += m[j][i]
                     res.append(tmp)
                     tmp = 0
                 else:
                     res.append(tmp)
-                    tmp = arr[j][i]
+                    tmp = m[j][i]
         res.append(tmp)
         while len(res) < n:
             res.append(0)
         for x in range(n):
-            arr[x][i] = res[x]
+            m[x][i] = res[x]
+    return m
 
-def down():
+def down(m):
     for i in range(n):
         res = []
         tmp = 0
         for j in range(n-1,-1,-1):
             if tmp == 0:
-                tmp = arr[j][i]
+                tmp = m[j][i]
             else:
-                if arr[j][i] == 0:
+                if m[j][i] == 0:
                     continue
-                if tmp == arr[j][i]:
-                    tmp += arr[j][i]
+                if tmp == m[j][i]:
+                    tmp += m[j][i]
                     res.append(tmp)
                     tmp = 0
                 else:
                     res.append(tmp)
-                    tmp = arr[j][i]
+                    tmp = m[j][i]
         res.append(tmp)
         while len(res) < n:
             res.append(0)
         res = res[::-1]
         for x in range(n):
-            arr[x][i] = res[x]
-def left():
+            m[x][i] = res[x]
+    return m
+
+def left(m):
     for i in range(n):
         res = []
         tmp = 0
         for j in range(n):
             if tmp == 0:
-                tmp = arr[i][j]
+                tmp = m[i][j]
             else:
-                if arr[i][j] == 0:
+                if m[i][j] == 0:
                     continue
-                if tmp == arr[i][j]:
-                    tmp += arr[i][j]
+                if tmp == m[i][j]:
+                    tmp += m[i][j]
                     res.append(tmp)
                     tmp = 0
                 else:
                     res.append(tmp)
-                    tmp = arr[i][j]
+                    tmp = m[i][j]
         res.append(tmp)
         while len(res) < n:
             res.append(0)
         for x in range(n):
-            arr[i][x] = res[x]
+            m[i][x] = res[x]
+    return m
 
-
-def right():
+def right(m):
     for i in range(n):
         res = []
         tmp = 0
         for j in range(n-1,-1,-1):
             if tmp == 0:
-                tmp = arr[i][j]
+                tmp = m[i][j]
             else:
-                if arr[i][j] == 0:
+                if m[i][j] == 0:
                     continue
-                if tmp == arr[i][j]:
-                    tmp += arr[i][j]
+                if tmp == m[i][j]:
+                    tmp += m[i][j]
                     res.append(tmp)
                     tmp = 0
                 else:
                     res.append(tmp)
-                    tmp = arr[i][j]
+                    tmp = m[i][j]
         res.append(tmp)
         while len(res) < n:
             res.append(0)
         res = res[::-1]
         for x in range(n):
-            arr[i][x] = res[x]
-
+            m[i][x] = res[x]
+    return m
 res = 0
-def dfs(cnt,arr_,v):
+def dfs(cnt,lst):
     global res
     if cnt == 5:
         for t in range(n):
-            res = max(res,max(arr_[t]))         
+            res = max(res,max(lst[t]))         
     else:
-        for i in [1,2]:
+        save = copy.deepcopy(lst)
+        for i in range(4):
             if i == 0:
-                v.append('l')
-                left()
-                dfs(cnt+1,arr_,v)
-                arr_ = arr[:]
-                v.pop()
+                dfs(cnt+1,left(copy.deepcopy(save)))
             elif i == 1:
-                v.append('r')
-                right()
-                dfs(cnt+1,arr_,v)
-                arr_ = arr[:]
-                v.pop()
+                dfs(cnt+1,right(copy.deepcopy(save)))
             elif i == 2:
-                if v == ['r']:
-                    pprint.pprint(arr)
-                v.append('u')
-                up()
-                dfs(cnt+1,arr_,v)
-                arr_ = arr[:]
-                v.pop()
+                dfs(cnt+1,up(copy.deepcopy(save)))
             else:
-                v.append('d')
-                down()
-                dfs(cnt+1,arr_,v)
-                arr_ = arr[:]
-                v.pop()
+                dfs(cnt+1,down(copy.deepcopy(save)))
 
 arr = []
 for i in range(n):
     arr.append(list(map(int,sys.stdin.readline().split())))
 
-
-dfs(0,arr[:],[])
+dfs(0,copy.deepcopy(arr))
 print(res)
-
-'''
-
-
-right()
-up()
-right()
-up()
-up()
-pprint.pprint(arr)
-'''
 
 ```
 
