--- a/java/7_추상클래스.md
+++ b/java/7_추상클래스.md
@@ -26,8 +26,7 @@ class AudioPlayer extends Player{
     void stop() {};
 }
 
-abstrac
-    t class AbstractPlayer extend Player{
+abstract class AbstractPlayer extend Player{
     void play(int pos) {};
 }
 ```
