--- a/java/study/7_추상클래스.md
+++ b/java/study/7_추상클래스.md
@@ -11,7 +11,7 @@
 특징
 
 - 인스턴스를 생성할 수 없다.
-- 추상클래스를 상속받는 클래스가 **추상클래스의 미완성 메서드를 전부 채우지 않으면** 이 또한 일반 클래스가 아니라 추상클래스가 된다.
+- 추상클래스를 상속받는 클래스가 **추상클래스의 미완성 메서드를 전부 채우지 않으면** 이 또한 일반 클래스가 아니라 추상클래스가 된다
 
 
 
